Revision history for Verilator

The contributors that suggested a given feature are shown in []. Thanks!

* Verilator 4.021 devel

***   Examples have been renamed.

***   Add --protect-ids to obscure information in objects, bug1521. [Todd Strader]

****  Increase case duplicate/incomplete to 16 bit tables, bug1545. [Yossi Nivin]


* Verilator 4.020 2019-10-06

***   Support $fseek, $ftell, $frewind, bug1496. [Howard Su]

***   Add --public-flat-rw, bug1511. [Stefan Wallentowitz]

***   Support vpiModule, bug1469. [Stefan Wallentowitz]

****  Make Syms file honor --output-split-cfuncs, bug1499. [Todd Strader]

****  Fix make test with no VERILATOR_ROOT, bug1494. [Ahmed El-Mahmoudy]

****  Fix error on multidimensional cells, bug1505. [Anderson Ignacio Da Silva]

****  Fix config_rev revision detection on old versions.

****  Fix false warning on backward indexing, bug1507. [Hao Shi]

****  Fix vpiType accessor, bug1509, bug1510. [Stefan Wallentowitz]

****  Fix ugly error on interface misuse, bug1525. [Bogdan Vukobratovic]

****  Fix misc bad-syntax crashes, bug1529-bug1533. [Eric Rippey]

****  Fix case statements with strings, bug1536. [Philipp Wagner]


* Verilator 4.018 2019-08-29

**    When showing an error, show source code and offer suggestions of replacements.

**    When showing an error, show the instance location, bug1305. [Todd Strader]

***   Add --rr, bug1481. [Todd Strader]

***   Change MULTITOP to warning to help linting, see manual.

***   Add XSim support to driver.pl, bug1493. [Todd Strader]

****  Show included-from filenames in warnings, bug1439. [Todd Strader]

****  Fix elaboration time errors, bug1429. [Udi Finkelstein]

****  Fix not reporting some duplicate signals/ports, bug1462. [Peter Gerst]

****  Fix not in array context on non-power-of-two slices, msg2946. [Yu Sheng Lin]

****  Fix system compile flags injection. [Gianfranco Costamagna]

****  Fix enum values not being sized based on parent, bug1442. [Dan Petrisko]
